2015-01-09  Torvald Riegel <triegel@redhat.com>

	* sysdeps/unix/sysv/linux/microblaze/pthread_once.c: Delete file.

2015-01-09  David Holsgrove  <david.holsgrove@xilinx.com>

	* sysdeps/microblaze/jmpbuf-unwind.h (_jmpbuf_sp): Declare SP as void
	pointer and cast to uintptr_t.

2015-01-09  David Holsgrove  <david.holsgrove@xilinx.com>

	* sysdeps/microblaze/nptl/tls.h (__microblaze_get_thread_area): Function
	removed.
	(READ_THREAD_POINTER): Use __microblaze_thread_area instead.

2015-01-09  David Holsgrove  <david.holsgrove@xilinx.com>

	* sysdeps/microblaze/nptl/tls.h (TLS_INIT_TP): Use NULL instead
	of 0.

2015-01-08  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/pthread/timer_routines.c: Fix <pthreadP.h> include to use
	<nptl/pthreadP.h> instead.
	* sysdeps/pthread/aio_notify.c: Include <signal.h> for raise decl.

	* signal/allocrtsig.c (RESERVED_SIGRT): New macro, defined to 0 if not
	already defined.
	[__SIGRTMIN] (init): Function removed.
	[__SIGRTMIN] (initialized): Variable removed.
	[!__SIGRTMIN] (current_rtmin, current_rtmax): Variables removed.
	[__SIGRTMIN] (current_rtmin, current_rtmax): Initialize to
	__SIGRTMIN + RESERVED_SIGRT and __SIGRTMAX, respectively.
	(__libc_current_sigrtmin) [__SIGRTMIN]: Don't call init.
	(__libc_current_sigrtmin) [!__SIGRTMIN]: Just return -1.
	(__libc_current_sigrtmin): Add __libc_current_sigrtmin_private alias.
	(__libc_current_sigrtmax) [__SIGRTMIN]: Don't call init.
	(__libc_current_sigrtmax) [!__SIGRTMIN]: Just return -1.
	(__libc_current_sigrtmax): Add __libc_current_sigrtmax_private alias.
	(__libc_allocate_rtsig) [__SIGRTMIN]: Don't call init.
	(__libc_allocate_rtsig): Add __libc_allocate_rtsig_private alias.
	* sysdeps/nptl/allocrtsig.c: New file.
	* sysdeps/unix/sysv/linux/allocrtsig.c: File removed.
	* sysdeps/unix/sysv/linux/testrtsig.h: File removed.
	* sysdeps/generic/testrtsig.h: File removed.

	* nptl/pthread_sigmask.c [SIGCANCEL || SIGTIMER || SIGSETXID]: #error.